--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <p>siemanko</p>
-    <!-- essa -->
+    <div id="a1"></div>
+    <div id="a2"></div>
+    <div id="a3"></div>
+    <div id="a4"></div>
+    <div id="a5"></div>
+
 </body>
 </html>
 
