--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,18 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div id="header-bar"> </div>
-    <div id="columns">
-    <div id="column-left">
-        <h2>Header 2</h2>
-        <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, id. Inventore rerum, eveniet quisquam, porro nisi vero in nostrum praesentium distinctio ex temporibus cupiditate quas iste! Sunt odio mollitia adipisci!
-        </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gravity</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+      <div id="title"></div>
+    <div id="header-bar"></div>
+    <div id="main">
+      <div id="columns">
+        <div id="column-left">
+          <h2>Header 2</h2>
+          <a href="#">onet.pl</a>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
+            atque autem debitis fugiat adipisci excepturi itaque officiis sint
+            omnis nobis dolorem vel velit aperiam nemo, dolorum, non vero,
+            voluptatem magni!
+          </p>
+        </div>
+        <div id="column-right">
+          <h2>Header 2</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
+            atque autem debitis fugiat adipisci excepturi itaque officiis sint
+            omnis nobis dolorem vel velit aperiam nemo, dolorum, non vero,
+            voluptatem magni!
+          </p>
+        </div>
+      </div>
+      <div id="circles">
+        <div id="circle"></div>
+        <div id="circle2"></div>
+      </div>
+    </div>
+    <div id="footer">Stopeczka</div>
+  </body>
+</html>
