--- a/lab3/index.html
+++ b/lab3/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="wrapper">
+    <div id="photos">
         <header>
             <div class="logo">
                 <img src="logo.jpg" alt="layer51">
-                <div class="subtitle"><span>design & development</span></div>
+                <div class="subtitle">
+                    <span>design & development</span>
+                </div>
             </div>
             <div class="photo-gallery">
                 <div class="row">
