--- a/lab3/index.html
+++ b/lab3/index.html
@@ -58,7 +58,9 @@
     <div class="mail">
         <img src="layer51/mail.png">
     </div>
-    
+    <div class="copyright">
+        <span>Copyright © 2011 Layer 51 </span>
+    </div>
 </div>
         </article>
     
